Fix mobile view text-alignment and personal photo size

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
+  text-align: center;
   margin-top: 20px;
   color: #454d4d;
 }
@@ -713,6 +714,8 @@ main {
 
   .about-me {
     width: 100%;
+    flex-direction: column;
+    text-align: center;
     margin-top: 20px;
     padding-left: 20px;
   }
@@ -725,15 +728,30 @@ main {
     width: 90%;
     margin: 20px 0 30px 0;
     font-size: 15px;
-    text-align: left;
+    text-align: center;
     line-height: 25px;
   }
+
+  .myimage-container {
+    width: 100%;
+    margin: 0;
+    padding-top: 20px;
+    display: flex;
+  }
+
+  .myimage-container img {
+    width: 127px;
+    height: 145px;
+    border-radius: 50%;
+    margin: 20px auto;
+  }  
 
   .skills {
     flex-direction: column;
     align-items: center;
-    margin: 50px auto 70px auto;
+    margin: 40px auto 70px auto;
     width: 90%;
+    text-align: center;
   }
 
   .skills-item {
